<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="176dp"
        android:background="?colorPrimaryVariant"
        android:padding="@dimen/margin_regular"
        android:orientation="vertical"
        android:gravity="bottom">

    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_regular"
            android:contentDescription="@string/nav_drawer_header_description"
            app:srcCompat="@drawable/ic_logo_short" />

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_regular"
            android:text="@string/nav_drawer_header_title"
            android:textColor="?colorOnPrimary"
            android:textAppearance="?textAppearanceSubtitle2" />

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nav_drawer_header_subtitle"
            android:textColor="?colorOnPrimary"
            android:textAppearance="?textAppearanceCaption"/>
</LinearLayout>