<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.screens.TvFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.MaterialComponents.Dark.ActionBar">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:contentScrim="?colorPrimary"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:maxLines="2">

            <androidx.constraintlayout.utils.widget.ImageFilterView
                android:id="@+id/avatar"
                android:layout_width="match_parent"
                android:layout_height="@dimen/appbar_avatar_height"
                android:contentDescription="@string/actors_photo_description"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_round_person_24"
                app:altSrc="@drawable/bg_gradient_bottom"
                app:crossfade="1"
                app:layout_collapseMode="parallax" />

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/ThemeOverlay.MaterialComponents.Light"
                tools:title="Rebecca Ferguson" />

        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <include
                android:id="@+id/section_loading"
                layout="@layout/layout_loading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/margin_regular"
                tools:visibility="gone" />

            <include
                android:id="@+id/section_error"
                layout="@layout/layout_error"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/margin_regular"
                tools:visibility="gone" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/section_content"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/text_common_header"
                    style="?textAppearanceSubtitle2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_regular"
                    android:text="@string/common_header"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/text_birthday"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/margin_regular"
                    android:layout_marginVertical="@dimen/margin_small"
                    android:ellipsize="end"
                    android:maxLines="2"
                    android:textAppearance="?textAppearanceBody1"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/text_common_header"
                    tools:text="1983-10-19 (38 лет)" />

                <TextView
                    android:id="@+id/text_birthday_hint"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/margin_regular"
                    android:layout_marginVertical="@dimen/margin_x_small"
                    android:text="@string/birthday_hint"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/text_birthday" />

                <View
                    android:id="@+id/divider_1"
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_marginVertical="@dimen/margin_small"
                    android:layout_marginStart="@dimen/margin_regular"
                    android:background="?android:attr/listDivider"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/text_birthday_hint" />

                <TextView
                    android:id="@+id/text_place_of_birth"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/margin_regular"
                    android:layout_marginVertical="@dimen/margin_small"
                    android:ellipsize="end"
                    android:maxLines="2"
                    android:textAppearance="?textAppearanceBody1"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/divider_1"
                    tools:text="Stockholm, Sweden" />

                <TextView
                    android:id="@+id/text_place_of_birth_hint"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/margin_regular"
                    android:layout_marginVertical="@dimen/margin_x_small"
                    android:text="@string/place_of_birth"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/text_place_of_birth" />

                <View
                    android:id="@+id/divider_2"
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_marginVertical="@dimen/margin_small"
                    android:layout_marginStart="@dimen/margin_regular"
                    android:background="?android:attr/listDivider"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/text_place_of_birth_hint" />

                <TextView
                    android:id="@+id/text_sex"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/margin_regular"
                    android:layout_marginVertical="@dimen/margin_small"
                    android:ellipsize="end"
                    android:maxLines="2"
                    android:textAppearance="?textAppearanceBody1"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/divider_2"
                    tools:text="Женский" />

                <TextView
                    android:id="@+id/text_sex_hint"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/margin_regular"
                    android:layout_marginVertical="@dimen/margin_x_small"
                    android:text="@string/sex"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/text_sex" />

                <View
                    android:id="@+id/divider_3"
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_marginVertical="@dimen/margin_small"
                    android:layout_marginStart="@dimen/margin_regular"
                    android:background="?android:attr/listDivider"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/text_sex_hint" />

                <TextView
                    android:id="@+id/text_bio_header"
                    style="?textAppearanceSubtitle2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_regular"
                    android:text="@string/bio_header"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/divider_3" />

                <TextView
                    android:id="@+id/text_bio"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/margin_regular"
                    android:layout_marginVertical="@dimen/margin_small"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/text_bio_header"
                    tools:text="Родилась 19 октября 1983 года в Васастан, Стокгольм, Швеция. Её мать Розмари — англичанка, переехавшая в Швецию в возрасте 25 лет; отец — швед. У Ребекки трое братьев и сестёр. В 1999 году она окончила музыкальную школу Адольфа Фредрикса." />

                <TextView
                    android:id="@+id/text_famous_motion_pictures"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_regular"
                    android:text="@string/famous_motion_pictures"
                    android:textAppearance="?textAppearanceHeadline6"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/text_bio" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recycler_view_credits"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="@dimen/margin_small"
                    android:clipToPadding="false"
                    android:nestedScrollingEnabled="false"
                    android:orientation="horizontal"
                    android:paddingHorizontal="@dimen/margin_small"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/text_famous_motion_pictures"
                    tools:listitem="@layout/list_item_panel_credit" />

                <TextView
                    android:id="@+id/text_others_header"
                    style="?textAppearanceSubtitle2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_regular"
                    android:text="@string/others_header"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/recycler_view_credits" />

                <TextView
                    android:id="@+id/text_filmography"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_x_small"
                    android:background="?selectableItemBackground"
                    android:drawablePadding="@dimen/margin_regular"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:padding="@dimen/margin_regular"
                    android:text="@string/filmography"
                    android:textAppearance="?textAppearanceSubtitle1"
                    app:drawableStartCompat="@drawable/ic_round_theaters_24"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/text_others_header" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </FrameLayout>
    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_instagram"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_regular"
        android:contentDescription="@string/to_instagram"
        android:src="@drawable/ic_instagram"
        android:visibility="gone"
        app:layout_anchor="@id/app_bar_layout"
        app:layout_anchorGravity="bottom|end"
        tools:visibility="visible" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>