<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">

    <androidx.drawerlayout.widget.DrawerLayout
            android:id="@+id/drawer_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <LinearLayout
                android:id="@+id/constraint_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

            <androidx.appcompat.widget.Toolbar
                    style="@style/Widget.App.Toolbar"
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    app:title="@string/app_name" />

            <ScrollView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1">

                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                    <TextView
                            android:id="@+id/text_movies_header"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginHorizontal="@dimen/margin_regular"
                            android:layout_marginTop="@dimen/margin_small"
                            android:textAppearance="?textAppearanceHeadline6"
                            android:text="@string/trending_movies" />

                    <FrameLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                        <include
                                layout="@layout/list_item_cinematic_trending"
                                android:visibility="invisible" />

                        <androidx.recyclerview.widget.RecyclerView
                                android:id="@+id/recycler_movies"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="horizontal"
                                android:paddingHorizontal="@dimen/margin_small"
                                android:paddingVertical="@dimen/margin_x_small"
                                android:clipToPadding="false"
                                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                                tools:listitem="@layout/list_item_cinematic_trending" />

                        <include
                                android:id="@+id/movies_loading"
                                layout="@layout/layout_loading"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                tools:visibility="gone" />

                        <include
                                android:id="@+id/movies_error"
                                layout="@layout/layout_error"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:visibility="gone" />

                    </FrameLayout>

                    <TextView
                            android:id="@+id/text_tvs_header"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginHorizontal="@dimen/margin_regular"
                            android:layout_marginTop="@dimen/margin_small"
                            android:textAppearance="?textAppearanceHeadline6"
                            android:text="@string/trending_tvs" />

                    <FrameLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                        <include
                            layout="@layout/list_item_cinematic_trending"
                            android:visibility="invisible" />

                        <androidx.recyclerview.widget.RecyclerView
                                android:id="@+id/recycler_tvs"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="horizontal"
                                android:paddingHorizontal="@dimen/margin_small"
                                android:paddingVertical="@dimen/margin_x_small"
                                android:clipToPadding="false"
                                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                                tools:listitem="@layout/list_item_cinematic_trending" />

                        <include
                                android:id="@+id/tvs_loading"
                                layout="@layout/layout_loading"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                tools:visibility="gone" />

                        <include
                                android:id="@+id/tvs_error"
                                layout="@layout/layout_error"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:visibility="gone" />

                    </FrameLayout>

                    <TextView
                            android:id="@+id/text_people_header"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginHorizontal="@dimen/margin_regular"
                            android:layout_marginTop="@dimen/margin_small"
                            android:textAppearance="?textAppearanceHeadline6"
                            android:text="@string/trending_people" />

                    <FrameLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                        <include
                                layout="@layout/list_item_person_trending"
                                android:visibility="invisible" />

                        <androidx.recyclerview.widget.RecyclerView
                                android:id="@+id/recycler_people"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="horizontal"
                                android:paddingHorizontal="@dimen/margin_small"
                                android:paddingVertical="@dimen/margin_x_small"
                                android:clipToPadding="false"
                                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                                tools:listitem="@layout/list_item_person_trending" />

                        <include
                                android:id="@+id/people_loading"
                                layout="@layout/layout_loading"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                tools:visibility="gone" />

                        <include
                                android:id="@+id/people_error"
                                layout="@layout/layout_error"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:visibility="gone" />

                    </FrameLayout>

                    <View
                            android:id="@+id/divider"
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:background="?android:attr/listDivider"
                            android:layout_marginHorizontal="@dimen/margin_regular"
                            android:layout_marginTop="@dimen/margin_small" />

                    <TextView
                            android:id="@+id/text_hint"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginHorizontal="@dimen/margin_regular"
                            android:layout_marginVertical="@dimen/margin_small"
                            android:gravity="center"
                            android:text="@string/trending_hint" />

                </LinearLayout>

            </ScrollView>

        </LinearLayout>

        <com.google.android.material.navigation.NavigationView
                android:id="@+id/drawer"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="start"
                android:fitsSystemWindows="true"
                app:menu="@menu/nav_drawer_menu"
                app:headerLayout="@layout/nav_drawer_header_layout" />

    </androidx.drawerlayout.widget.DrawerLayout>
</layout>